--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
+    "aws-amplify": "^5.3.11",
+    "aws-amplify-react": "^5.1.43",
+    "aws-appsync": "^4.1.9",
+    "aws-appsync-react": "^4.0.15",
+    "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
     "react": "^18.2.0",
+    "react-apollo": "^2.1.11",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.4"
   }
 }
